--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <ul>
       <a href="#"><li>Home</li></a>
       <a href="#"><li>Order</li></a>
-      <a href="#"><li>Login</li></a>
-      <a href="#"><li>Sign Up</li></a>
+      <a href="#"><li>Login/Sign Up</li></a>
       <a href="#"><li>About</li></a>
     </ul>
   </nav>
